# ESP-Miner-NerdQAxePlus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  config-401.cvs  config-nerdqaxe+.csv  config.cvs.example  config.cvs.nerdaxe.example  config.cvs.nerdqaxeplus.example  config.cvs.nerdqaxeplus2.example  format_all.sh  package-lock.json  readme.md  sdkconfig.defaults
components/bm1397/: CMakeLists.txt  asic.cpp  bm1366.c  bm1366.cpp  bm1368.c  bm1368.cpp  bm1370.cpp  bm1373.cpp  bm1397.c  crc.cpp  mining.cpp  mining_utils.cpp  serial.c  serial.cpp  utils.cpp
components/bm1397/include/: asic.h  bm1366.h  bm1368.h  bm1370.h  bm1373.h  bm1397.h  common.h  crc.h  mining.h  mining_utils.h  serial.h
components/libsecp256k1/: CMakeLists.txt
main/: CMakeLists.txt  DS4432U.c  EMC2101.c  EMC2101.h  EMC2302.c  EMC2302.h  INA260.c  Kconfig.projbuild  TMP1075.c  TMP1075.h  TPS53647.c  TPS53647.h  TPS546.c  connect.cpp  connect.h  discord.cpp  discord.h  fan_controller.cpp  fan_controller.h  fonts.c  global_state.h  guards.h  history.c  history.cpp  history.h  i2c_master.c  i2c_master.cpp  i2c_master.h  idf_component.yml  leak_tracker.c  leak_tracker.h  led_controller.c  lvgl_psram.h  macros.h  main.c  main.c.bak  main.cpp  main.h  ntp_time.cpp  ntp_time.h  (+21 more)
main/boards/: board-params.h  board.cpp  board.h  board.h.bak  nerdaxe.cpp  nerdaxe.h  nerdaxegamma.cpp  nerdaxegamma.h  nerdeko.cpp  nerdeko.h  nerdhaxegamma.cpp  nerdhaxegamma.h  nerdoctaxegamma.cpp  nerdoctaxegamma.h  nerdoctaxeplus.cpp  nerdoctaxeplus.h  nerdqaxeplus.c  nerdqaxeplus.cpp  nerdqaxeplus.h  nerdqaxeplus2.cpp  nerdqaxeplus2.h  nerdqx.cpp  nerdqx.h  q1370.cpp  q1370.h  q1373.cpp  q1373.h
main/boards/drivers/: EMC2302.c  EMC2302.cpp  EMC2302.h  TMP1075.c  TMP1075.cpp  TPS53647.cpp  TPS53647.h  TPS53667.cpp  TPS53667.h  fxl6408.cpp  fxl6408.h  i2c_master.cpp  i2c_master.h  pmbus_commands.h  tmp451.cpp  tmp451.h  tmp451_mux.cpp  tmp451_mux.h  tmp451_mux_exp.cpp  tmp451_mux_exp.h
main/boards/drivers/nerdaxe/: DS4432U.cpp  DS4432U.h  EMC2101.cpp  EMC2101.h  INA260.cpp  INA260.h  TPS546.cpp  TPS546.h  adc.cpp
main/displays/: APIs.c  APIs.cpp  APIs.h  button.cpp  button.h  displayDriver.c  displayDriver.cpp  displayDriver.h  lv_conf.h  ui.c  ui.cpp  ui.h  ui_helpers.cpp  ui_helpers.h  ui_ipc.cpp  ui_ipc.h
main/displays/images/: ui_font_DigitalNumbers16.c  ui_font_DigitalNumbers28.c  ui_font_OpenSansBold13.c  ui_font_OpenSansBold14.c  ui_font_OpenSansBold24.c  ui_font_OpenSansBold45.c  ui_font_vt323_21.c  ui_font_vt323_35.c  ui_helpers.c  ui_helpers.h  ui_img_PortalScreen_png.c  ui_img_btcscreen_png.c  ui_img_can_png.c  ui_img_eth_png.c  ui_img_found_block_png.c  ui_img_initscreen2_png.c  ui_img_miningscreen2_png.c  ui_img_overheat_png.c  ui_img_portalscreen_png.c  ui_img_safe_png.c  ui_img_settingsscreen_png.c  ui_img_splashscreen2_png.c  ui_img_wifi_png.c
main/displays/images/Converter Tool/: convert_all.sh  convert_single.py  create_themes.py  requirements.txt  themes.c.j2  themes.h.j2
main/displays/images/Raw Images/: convert_all.sh  convert_single.py
main/displays/images/themes/: themes.c  themes.h
main/displays/images/themes/Generic/: ui_img_btcscreen_png.c  ui_img_globalStats_png.c  ui_img_initscreen2_png.c  ui_img_miningscreen2_png.c  ui_img_portalscreen_png.c  ui_img_settingsscreen_png.c  ui_img_splashscreen2_png.c
main/displays/images/themes/NerdAxe/: ui_img_btcscreen_png.c  ui_img_globalStats_png.c  ui_img_initscreen2_png.c  ui_img_miningscreen2_png.c  (+3 more)
main/http_server/: handler_alert.cpp  handler_alert.h  handler_can_swarm.cpp  handler_can_swarm.h  handler_file.cpp  handler_file.h  handler_influx.cpp  handler_influx.h  handler_ota.cpp  handler_ota.h  handler_ota_factory.cpp  handler_ota_factory.h  handler_otp.cpp  handler_otp.h  handler_restart.cpp  handler_restart.h  handler_shutdown.cpp  handler_shutdown.h  handler_swarm.cpp  handler_swarm.h  handler_system.cpp  handler_system.h  handler_wifi_scan.cpp  handler_wifi_scan.h  http_cors.cpp  http_cors.h  http_server.c  http_server.cpp  http_server.h  http_utils.cpp  http_utils.h  http_websocket.cpp  http_websocket.h  recovery_page.h
main/http_server/axe-os/: .gitignore  INTERNATIONALIZATION.md  angular.json  only-gzip.js  package-lock.json  package.json  proxy.conf.json  proxy.conf.json.example  readme.md  tsconfig.json
main/http_server/axe-os/src/: index.html
main/http_server/certs/: readme.md  server.crt  server.key
main/http_server/v2/: handler_v2_dashboard.cpp  handler_v2_dashboard.h  handler_v2_identify.cpp  handler_v2_identify.h  handler_v2_settings.cpp  handler_v2_settings.h  handler_v2_system.cpp  handler_v2_system.h
main/network/: connect.cpp  connect.h  network_manager.cpp  network_manager.h  w5500.cpp  w5500.h
main/otp/: doc.md  otp.cpp  otp.h  qrcodegen.cpp  qrcodegen.h
main/pid/: PID_v1_bc.cpp  PID_v1_bc.h  README.md  pid_timer.cpp  pid_timer.h
main/self_test/: self_test.c  self_test.cpp  self_text.h
main/stratum/: stratum_api.cpp  stratum_api.h  stratum_config.cpp  stratum_config.h  stratum_manager.cpp  stratum_manager.h  stratum_manager_dual_pool.cpp  stratum_manager_dual_pool.h  stratum_manager_fallback.cpp  stratum_manager_fallback.h  stratum_task.cpp  stratum_task.h  stratum_task_v2.cpp  stratum_task_v2.h  stratum_transport.cpp  stratum_transport.h  stratum_transport_noise.cpp  stratum_transport_noise.h
main/tasks/: apis_task.cpp  apis_task.h  asic_jobs.h  asic_result_task.c  asic_result_task.cpp  asic_result_task.h  asic_task.c  asic_task.h  btc_task.cpp  btc_task.h  can_master_task.cpp  can_master_task.h  can_sender.cpp  can_sender.h  can_slave_task.cpp  can_slave_task.h  can_task.cpp  can_task.h  create_jobs_sv2.cpp  create_jobs_sv2.h  create_jobs_task.c  create_jobs_task.cpp  create_jobs_task.h  dns_task.cpp  dns_task.h  hashrate_monitor_task.cpp  hashrate_monitor_task.h  influx_task.c  influx_task.cpp  influx_task.h  mining_info_v2.cpp  mining_info_v2.h  ping_task.cpp  ping_task.h  power_management_task.c  power_management_task.cpp  power_management_task.h  scoreboard.cpp  scoreboard.h  stats_task.c  (+9 more)
(+306 files in other folders)
